--- a/COMP301/012521.md
+++ b/COMP301/012521.md
@@ -50,8 +50,11 @@ that can follow the instructions
   itself 
 
 **Compiling on the command line**
+
 `javac -classpath dependencyPath1;dependencyPath2 sourceFile`
+
 **Executing on the command line**
+
 `java -classpath dependencyPath1;dependencyPath2
 classFileToBeExecuted`
 
@@ -92,7 +95,7 @@ language to language**
 2. Compile - Compile into bytecode
 3. Test - Run unit tests for the project
 4. Package - Pack into a distributable format
-5. Verify - Make sure your package works
+5. Verify - Make sure your package quality is up to par 
 6. Site - Provide documentation for your work
 7. Deploy - Send out your project
 
