--- a/COMP211/030421.md
+++ b/COMP211/030421.md
@@ -89,7 +89,7 @@ Look over the course schedule to see topics
   - Address-of operator (&)
   - Pointer dereference
   - Arrays and pointers
-- Role of the linker including static and dynamic libraries
+- Role of the [linker](https://github.com/cvunc/comp-notes/blob/main/COMP211/022321.md#execution-model-linking) including static and dynamic libraries
   - **Piazza posts @283 and @237**
 - Putting it all together
   - What is the role of the compiler, assembler, linker, and
