--- a/COMP211/030421.md
+++ b/COMP211/030421.md
@@ -70,7 +70,7 @@ Look over the course schedule to see topics
 - Integer arithmetic operations
   - Addition, subtraction, multiplication, and division
   - Multiplication and division restrict to shift operations
-- Language abstraction
+- [Language abstraction](https://github.com/cvunc/comp-notes/blob/main/COMP211/020421.md#language-abstraction)
   - High-level, assembly, and machine code
   - Steps in execution model
   - REVIEW
