--- a/COMP211/030421.md
+++ b/COMP211/030421.md
@@ -63,7 +63,7 @@ Look over the course schedule to see topics
 - Numeric and non-numeric data representations
   - Number of bits to encode N symbols
   - ASCII tables
-- Unsigned and signed number representations
+- Unsigned and [signed number](https://github.com/cvunc/comp-notes/blob/main/COMP211/012621.md#signed-number-representations) representations
   - Be very comfortable!
 - Floating point number representation
   - Fixed point and IEEE 754
