--- a/COMP211/030421.md
+++ b/COMP211/030421.md
@@ -65,8 +65,8 @@ Look over the course schedule to see topics
   - ASCII tables
 - Unsigned and [signed number](https://github.com/cvunc/comp-notes/blob/main/COMP211/012621.md#signed-number-representations) representations
   - Be very comfortable!
-- Floating point number representation
-  - Fixed point and IEEE 754
+- [Floating point](https://github.com/cvunc/comp-notes/blob/main/COMP211/020221.md#floating-point-representation) number representation
+  - [Fixed point](https://github.com/cvunc/comp-notes/blob/main/COMP211/020221.md#fixed-point-values) and IEEE 754
 - Integer arithmetic operations
   - Addition, subtraction, multiplication, and division
   - Multiplication and division restrict to shift operations
