--- a/COMP211/031621.md
+++ b/COMP211/031621.md
@@ -22,10 +22,32 @@ Virtual Page Offset `1 0`
 |----------------|-----------------------|-------------|
 | 000            | 00                    | 1           |
 | 001            | 11                    | 1           |
-| 010            |                       | 1           | 
+| 010            |                       | 0           | 
 | 011            |                       | 0           |
 | 100            |                       | 0           |
 | 101            |                       | 0           |
 | 110            |                       | 0           |
 | 111            |                       | 0           |  
+
 All of this is managed by the MMU
+The VIRTUAL PAGE # gets you the PHYSICAL PAGE FRAME #  
+Then the VIRTUAL PAGE OFFSET is your PHYSICAL OFFSET  
+
+The page table is in the MMU on the CPU  
+To add a physical memory block to the Page Table, find
+a spot to map it and add the tag bits to the Page Table,
+then mark it as present in the table  
+
+Virtual page numbers are linear, you can do one after the
+other  
+**BUT** they can point to very different physical addresses
+giving us more freedom to point where we need  
+
+Virtual pages can contain more than one memory block! If
+they add one extra offset bit, then each virtual page is TWO
+memory blocks  
+
+### Improved System Utilization
+Program can be *larger than all of main memory*  
+Improved address space because virtual (logical) addresses
+have more space than physical addresses  
