--- a/COMP301/032221.md
+++ b/COMP301/032221.md
@@ -54,8 +54,7 @@ public interface Iterator<T> {
   T next();
 
   // DONT NEED TO WORRY ABOUT THESE
-  default void forEachRemaining(Consumer<? super T> action)
-  {};
+  default void forEachRemaining(Consumer<? super T> action) {};
   default void remove() {};
 }
 ```
