--- a/COMP211/033021.md
+++ b/COMP211/033021.md
@@ -21,15 +21,15 @@ And if `s = 1` then `B XOR s = ~B`
 
 ## ALU Circuit
 ### 5-bit ALU Function Selector
- Sub | Bool | Shft | Math | OP |
+| Sub | Bool | Shft | Math | OP |
 ---------------------------------
- 0 | XX | X | 1 | A + B |
- 1 | XX | X | 1 | A - B |
- X | 00 | 1 | 0 | B << A | 
- X | 01 | 1 | 0 | B >> A |
- X | 10 | 1 | 0 | B >>> A |
- X | 00 | 0 | 0 | A & B |
- X | 01 | 0 | 0 | A | B |
- X | 10 | 0 | 0 | A ^ B |
- X | 11 | 0 | 0 | A XOR B |
+| 0 | XX | X | 1 | A + B |
+| 1 | XX | X | 1 | A - B |
+| X | 00 | 1 | 0 | B << A | 
+| X | 01 | 1 | 0 | B >> A |
+| X | 10 | 1 | 0 | B >>> A |
+| X | 00 | 0 | 0 | A & B |
+| X | 01 | 0 | 0 | A | B |
+| X | 10 | 0 | 0 | A ^ B |
+| X | 11 | 0 | 0 | A XOR B |
 
