--- a/COMP301/050321.md
+++ b/COMP301/050321.md
@@ -89,3 +89,59 @@ public class MultiThreader {
   }
 }
 ```
+
+### Waiting for a Thread to finish
+```Java
+public class MultiThreader {
+  public static void main(String[] args) {
+    Runnable task1 = 
+      () -> {
+        for (int i = 0; i < 10; i++) {
+          System.out.println(i);
+        }
+      };
+
+    System.out.println("Printing 0-9");
+
+    Thread thread = new Thread(task1);
+    thread.start();
+
+    Thread thread2 = new Thread(task1);
+    thread2.start();
+
+    // ADD THREADS BACK TO MAIN THREAD
+    thread.join();
+    thread2.join();
+
+    // So done is still printed last
+    System.out.println("Done");
+  }
+}
+```
+
+**Race Condition:** A segment of concurrent code where the
+timing of execution affects the result  
+Multiple threads reading from or writing to the same object!  
+
+Who wins? It's a race!!
+
+Any time you **read** or **write** to an object shared
+between threads, you are putting yourself at risk for a race
+condition  
+
+### Synchronized Methods
+These methods need to be **mutually exclusive**  
+
+`synchronized` keyword forces methods in an object to be
+*mutually exclusive*  
+
+Java forces these methods to be executed at *different
+times*  
+
+### Bottom Line
+**Parallelization** can speed up your job by doing multiple
+tasks at once  
+
+Make sure to keep methods mutually exclusive if they will
+result in a race condition  
+
