--- a/COMP301/032421.md
+++ b/COMP301/032421.md
@@ -60,7 +60,7 @@ public class BorderedWindow implements Window {
   private Window baseWindow;
 
   // Take the instance of the interfae as a parameter
-  decorator(Window baseWindow) {
+  BorderedWindow(Window baseWindow) {
     this.baseWindow = baseWindow;
   }
 
