--- a/COMP301/032421.md
+++ b/COMP301/032421.md
@@ -84,7 +84,7 @@ public class BorderedWindow implements Window {
 Window baseWindow = new WindowImpl();
 Window borderedWindow = new BorderedWindow(baseWindow);
 
-double value = decoratedWindow.paintWindow();
+double value = borderedWindow.paintWindow();
 ```
 
 ### Decorator Pattern Recipe
