--- a/COMP301/030321.md
+++ b/COMP301/030321.md
@@ -35,8 +35,7 @@ error occurred
 ```Java
 private void setAge(int age) {
   if (age < 0) {
-    throw new IllegalArgumentException("AGE IS NOT
-    ALLOWED");
+    throw new IllegalArgumentException("AGE IS NOT ALLOWED");
   }
   this.age = age;
 }
