--- a/comp311/081921.md
+++ b/comp311/081921.md
@@ -1,2 +1,14 @@
 ## Syllabus Week
+### JOIN GRADESCOPE
+### Lab 1 due next week
+Simple LED setup with a resistor  
+### Homework 0.5 on COMP 211 materials
+### Reading questions due next class
+### Fill out the partner form
+### DO HAVE recitation tomorrow
 
+## Little Setup
+LED power goes in the long end, out the short end  
+Anode is long, cathode is short (ground)  
+The cathode has a **flat** head on the wire, even when you
+cut it  
