Getting into regex

--- a/comp455/082321.md
+++ b/comp455/082321.md
@@ -40,7 +40,7 @@ Any set of strings over an alphabet is called a **language**
    = {ab, ac, ad, bb, bc, bd, cb, cc, cd}`  
  - Kleene Star: If `L` is a language then `L*`, the *Kleene
    star* of L, is `{w1, w2, ... wk : k >= 0, wi elementof
-   L all i}` also written `{}
+   L for all i}` also written `{}
    U L U L ◯ L U L ◯ L ◯ L U L ◯ L ◯ L ◯ L U ...`  
   - Suppose `L = {00, 11}`  
   - Then `L* = {0000, 0011, 1100, 1111, 00, 11, emptystring, 001100, ...}`
